<resources>
    <string name="app_name">EnterTRAINment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="music">music</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="time">TIME</string>
    <string name="estimated_time">ESTIMATED TIME</string>
    <string name="current_weather">CURRENT WEATHER</string>
    <string name="distance">DISTANCE</string>
    <string name="set_alarm">set alarm</string>
    <string name="temperature">0 ℃</string>
    <string name="weather_status">weather status</string>
    <string name="weather_info">weather_info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_image">song image</string>
    <string name="upvote">upvote</string>
    <string name="play">play</string>
    <string name="random_chat_find_pair_btn_text">find pair</string>
    <string name="android_chat_message_hint">Write a text</string>
    <string name="title_activity_player">Player</string>
    <string name="book_text_sample">It all began with a stolen kiss. Layla Bungah had a normal life before the school system threw a new teacher into the mix. She had a boyfriend that loved her, a best friend that was more of a sister than anything, and a father that trusted her, even though she kept secrets from him daily. Devin Simmons has decided to give being an English teacher a chance since that was his actual major in college. He just wanted to have the thrill of teaching young people what he knew and what he was taught. He never expected to be teaching one of his students other things. When Layla comes to class one day she’s disappointed that one of her favorite teacher was fired and replaced so easily. She soon finds out the new teacher isn’t so bad, not to mention hunkalisious. But Layla isn\'t the only one guilty of fantasizing about her sexy new teacher. Devin often stares at Layla with affection, and Layla can’t help but think he feels the same way. Soon Devin and Layla have a secret. A secret that really shouldn’t get out or it could cause trouble. It all began with a stolen kiss. Layla Bungah had a normal life before the school system threw a new teacher into the mix. She had a boyfriend that loved her, a best friend that was more of a sister than anything, and a father that trusted her, even though she kept secrets from him daily. Devin Simmons has decided to give being an English teacher a chance since that was his actual major in college. He just wanted to have the thrill of teaching young people what he knew and what he was taught. He never expected to be teaching one of his students other things. When Layla comes to class one day she’s disappointed that one of her favorite teacher was fired and replaced so easily. She soon finds out the new teacher isn’t so bad, not to mention hunkalisious. But Layla isn\'t the only one guilty of fantasizing about her sexy new teacher. Devin often stares at Layla with affection, and Layla can’t help but think he feels the same way. Soon Devin and Layla have a secret. A secret that really shouldn’t get out or it could cause trouble for the both of them.</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="next_station">NEXT STATION</string>
    <string name="station">STATION</string>
    <string name="chat">chat</string>
    <string name="map">map</string>
    <string name="reading_qr_fragment_read_qr">Scan your code</string>
    <string name="action_change_username">change username</string>
    <string name="app_background">app background</string>
</resources>
