<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".map.StationInfoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="@android:style/TextAppearance.Large"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estimated_time"
                android:textAppearance="@android:style/TextAppearance.Small"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAppearance="@android:style/TextAppearance.Large"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAppearance="@android:style/TextAppearance.Small"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/alarm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="@dimen/main_descr_layout_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_weather"
            android:gravity="center"
            android:layout_margin="@dimen/city_name_margin"
            android:textAppearance="@android:style/TextAppearance"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/divider_height"
            android:layout_marginLeft="@dimen/divider_margin"
            android:layout_marginRight="@dimen/divider_margin"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/na"
                android:contentDescription="@string/weather_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_descr_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:layout_gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Large"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_status"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
